first commit 3rd single-page

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "url": "git+https://github.com/infomotin/React_E-Shop.git"
     },
     "author": "Motin",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/infomotin/React_E-Shop/issues"
     },
