--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "nodemon": "^2.0.7"
     },
     "scripts": {
-        "start": "node backend/server"
+        "start": "node backend/server",
+        "server": "nodemon backend/server",
+        "client": "npm start --prefix frontend",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "repository": {
         "type": "git",
