--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "D": "^1.0.0",
         "bootstrap": "^4.5.3",
         "concurrently": "^5.3.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "nodemon": "^2.0.7",
         "react-bootstrap": "^1.4.3"
