first commit 3rd single-page - install dependence script concurrently adding   install env pack error

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "description": "\"MERN shopping cart app\"",
     "main": "server.js",
+    // for sometime importing "module": "",
+    "type": "module",
     "dependencies": {
         "-": "0.0.1",
         "D": "^1.0.0",
