--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5000
+MONGO_URI = mongodb+srv://motin123:motin123@cluster0.yexu5.mongodb.net/proshop?retryWrites=true&w=majority
