--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "-": "0.0.1",
         "D": "^1.0.0",
         "bootstrap": "^4.5.3",
+        "colors": "^1.4.0",
         "concurrently": "^5.3.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
