--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "-": "0.0.1",
         "D": "^1.0.0",
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^4.5.3",
         "colors": "^1.4.0",
         "concurrently": "^5.3.0",
